force-app/main/default/objects/PGi_ServiceCatalog_Category_Option__c/PGi_ServiceCatalog_Category_Option__c.object-meta.xml
<CustomObject>
    <label>Category Option</label>
    <nameField>
        <displayFormat>CO-{0000}</displayFormat>
        <label>Category Option</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Category Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>