force-app/main/default/objects/PGi_ServiceCatalog_Category_Option__c/fields/Allow_Attachments__c.field-meta.xml
<CustomField>
    <fullName>Allow_Attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Attachments</label>
    <type>Checkbox</type>
</CustomField>