force-app/main/default/objects/PGi_ServiceCatalog_Category_Option__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <referenceTo>PGi_ServiceCatalog_Category__c</referenceTo>
    <relationshipLabel>Category Options</relationshipLabel>
    <relationshipName>Category_Options</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>