force-app/main/default/objects/PGi_ServiceCatalog_Category_Option__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Long text description of the form type</description>
    <inlineHelpText>Long text description of the form type</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>