force-app/main/default/objects/PGi_ServiceCatalog_Category_Option__c/fields/External_User_Instructions__c.field-meta.xml
<CustomField>
    <fullName>External_User_Instructions__c</fullName>
    <label>External User Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>