force-app/main/default/objects/PGi_ServiceCatalog_Category_Option__c/fields/Navigate_to__c.field-meta.xml
<CustomField>
    <fullName>Navigate_to__c</fullName>
    <description>If the navigate to is left blank, then the user is shown the field input, otherwise they will be directed to this url</description>
    <inlineHelpText>If the navigate to is left blank, then the user is shown the field input, otherwise they will be directed to this url</inlineHelpText>
    <label>Navigate to</label>
    <type>Url</type>
</CustomField>