force-app/main/default/objects/PGi_ServiceCatalog_Category_Option__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case</fullName>
                <default>true</default>
                <label>Case</label>
            </value>
            <value>
                <fullName>PGi_ServiceCatalog_Category__c</fullName>
            </value>
            <value>
                <fullName>Object_Does_Not_Exist__c</fullName>
            </value>
            <value>
                <fullName>Human_Resource_Form__c</fullName>
            </value>
            <value>
                <fullName>Request_for_Change__c</fullName>
            </value>
            <value>
                <fullName>Product_Launch_Process__c</fullName>
            </value>
            <value>
                <fullName>Financial_Request__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>