force-app/main/default/objects/PGi_ServiceCatalog_Category_Option__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Used for the heading of the description</description>
    <inlineHelpText>Used for the heading of the description</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>