force-app/main/default/objects/PGi_ServiceCatalog_Category_Option__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Object_API_Name__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Category__c</columns>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Active__c</columns>
    <columns>Allow_Attachments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>